tests/strict_mode/strict_mode.exp
Error: test.js:3
  3: import type { T } from './import';
                   ^ untyped-type-import: Importing a type from an untyped module makes it `any` and is not safe! Did you mean to add `// @flow` to the top of `./import`?


Found 1 error
